; ModuleID = '/home/carl/AnghaBench/redis/src/extr_acl.c_ACLFreeUserAndKillClients.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_acl.c_ACLFreeUserAndKillClients.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32 }
%struct.TYPE_5__ = type { i64, i32* }

@server = common dso_local global %struct.TYPE_6__ zeroinitializer, align 4
@DefaultUser = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ACLFreeUserAndKillClients(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_5__*, align 8
  store i32* %0, i32** %2, align 8
  %6 = load i32, i32* getelementptr inbounds (%struct.TYPE_6__, %struct.TYPE_6__* @server, i32 0, i32 0), align 4
  %7 = call i32 @listRewind(i32 %6, i32* %3)
  br label %8

8:                                                ; preds = %27, %1
  %9 = call i32* @listNext(i32* %3)
  store i32* %9, i32** %4, align 8
  %10 = icmp ne i32* %9, null
  br i1 %10, label %11, label %28

11:                                               ; preds = %8
  %12 = load i32*, i32** %4, align 8
  %13 = call %struct.TYPE_5__* @listNodeValue(i32* %12)
  store %struct.TYPE_5__* %13, %struct.TYPE_5__** %5, align 8
  %14 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %15 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %14, i32 0, i32 1
  %16 = load i32*, i32** %15, align 8
  %17 = load i32*, i32** %2, align 8
  %18 = icmp eq i32* %16, %17
  br i1 %18, label %19, label %27

19:                                               ; preds = %11
  %20 = load i32*, i32** @DefaultUser, align 8
  %21 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %22 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %21, i32 0, i32 1
  store i32* %20, i32** %22, align 8
  %23 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %24 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %23, i32 0, i32 0
  store i64 0, i64* %24, align 8
  %25 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %26 = call i32 @freeClientAsync(%struct.TYPE_5__* %25)
  br label %27

27:                                               ; preds = %19, %11
  br label %8

28:                                               ; preds = %8
  %29 = load i32*, i32** %2, align 8
  %30 = call i32 @ACLFreeUser(i32* %29)
  ret void
}

declare dso_local i32 @listRewind(i32, i32*) #1

declare dso_local i32* @listNext(i32*) #1

declare dso_local %struct.TYPE_5__* @listNodeValue(i32*) #1

declare dso_local i32 @freeClientAsync(%struct.TYPE_5__*) #1

declare dso_local i32 @ACLFreeUser(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
